# spiel-it

./: .gitignore  README.md  meson.build
.github/workflows/: build-repo.yml
build-aux/: org.project_spiel.SpielIt.json
subprojects/: libspiel.wrap
